# Parallel_Computing

./: .gitignore  README  README.md
HW1/: HW1.c  HW1.out  HW1a  HW1a.c  HW1b  HW1b.c  README.md  processor0.txt  processor1.txt  processor2.txt  processor3.txt  processor4.txt  processor5.txt
HW2/: README
HW2/src/: .CMakeLists.txt.swp  CMakeLists.txt  HW2.c
HW3/: README.md
HW3/src/: CMakeLists.txt  HW3.c
HW4/: README.md
HW4/src/: CMakeLists.txt  HW4.c
HW5/: README.md
HW5/src/: HW4.c  HW5.c
final/: README.md
final/doc/: report.tex
final/src/: CMakeLists.txt  driver.c  driver_functions.c  driver_functions.h
final/src/lib/: CMakeLists.txt  acoustic_problem.c  acoustic_problem.h
final/src/postprocess/: plot_step.py
homework10/: CMakeLists.txt  HW10-i19-O0.optrpt  HW10-i19-O1.optrpt  HW10-i19-O2.optrpt  HW10-i19-O3.optrpt  HW10-i24-O0.optrpt  HW10-i24-O1.optrpt  HW10-i24-O2.optrpt  HW10-i24-O3.optrpt  HW10.c  README.md  graph.py  homework10.tex
homework5/: CMakeLists.txt
homework5/src/: .HW5.c.swp
homework5/tools/: CMakeLists.txt  tools.c
homework6/: CMakeLists.txt  HW6.c  README.md
homework7/: CMakeLists.txt  HW7  HW7.c  HW7_08  HW7_08.c  HW7_09_a  HW7_09_c.c  HW7_10_dynamic.c  HW7_10_static.c  HW7_11.c  bad_CMakeLists.txt  homework7.tex
homework8/: CMakeLists.txt  HW8.c  README.md
homework9/: CMakeLists.txt  HW9.c  homework9.tex
